cluster/infrastructure/keycloak/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/version: '26.3.3'
  name: keycloak
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: keycloak
  template:
    metadata:
      labels:
        app.kubernetes.io/name: keycloak
        app.kubernetes.io/version: '26.3.3'
    spec:
      containers:
      - args:
        - start
        image: quay.io/keycloak/keycloak:26.3.3
        name: keycloak
        ports:
        - containerPort: 8080
          name: keycloak
