cluster/infrastructure/keycloak/discovery-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/version: '26.3.3'
  name: keycloak-discovery
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: keycloak
