cluster/infrastructure/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/version: '26.3.3'
  name: keycloak
spec:
  ports:
  - name: http-keycloak
    port: 8080
    targetPort: 8080
  selector:
    app.kubernetes.io/name: keycloak
